--- a/milestone1/1_network_properties.ipynb
+++ b/milestone1/1_network_properties.ipynb
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12851f7b8>"
+       "<matplotlib.image.AxesImage at 0x1220a1898>"
       ]
      },
      "execution_count": 25,
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -1195,6 +1195,13 @@
     "article_df.to_csv('article_dv.csv')\n",
     "#np.save('adjacency_sym.npy', adjacency_sym)\n",
     "np.savez_compressed('adjacency_undirected.npz', adjacency_undirected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NOTE: For the following questions we consider only the undirected graph!"
    ]
   },
   {
@@ -1225,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1273,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1284,7 +1291,7 @@
        "52.09995654063451"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1355,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -1375,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1409,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1431,12 +1438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    1,    1, ...,    3, 4602, 4602])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Implements the Djikstra algorithm from Wikipedia: https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#Algorithm\n",
+    "# TODO: not shure if this is correct. also, it seems that some of the nodes are not reachable\n",
     "def compute_shortest_path_lengths(adjacency, source):\n",
     "    \"\"\"Compute the shortest path length between a source node and all nodes.\n",
     "    \n",
@@ -1452,10 +1470,27 @@
     "    list of ints\n",
     "        The length of the shortest path from source to all nodes. Returned list should be of length n_nodes.\n",
     "    \"\"\"\n",
+    "    n_nodes = adjacency.shape[0]\n",
+    "    MAX_DIST = n_nodes\n",
+    "    unvisited = set(np.arange(n_nodes))\n",
+    "    shortest_path_lengths = np.full(n_nodes, MAX_DIST)\n",
+    "\n",
+    "    shortest_path_lengths[source] = 0\n",
+    "    while unvisited:\n",
+    "        unvisited_list = list(unvisited)\n",
+    "        current = unvisited_list[np.argmin(shortest_path_lengths[unvisited_list])]\n",
+    "        adjacency_list = adjacency[current]\n",
+    "        neighbors = set(np.nonzero(adjacency_list)[0])\n",
+    "        for n in neighbors.intersection(unvisited):\n",
+    "            path_len = shortest_path_lengths[current] + 1\n",
+    "            if shortest_path_lengths[n] > path_len:\n",
+    "                shortest_path_lengths[n] = path_len\n",
+    "\n",
+    "        unvisited.remove(current)\n",
     "    \n",
-    "    # Your code here.\n",
-    "    \n",
-    "    return shortest_path_lengths"
+    "    return shortest_path_lengths\n",
+    "\n",
+    "compute_shortest_path_lengths(adjacency_undirected, 0)"
    ]
   },
   {
@@ -1469,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1489,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -1529,11 +1564,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'n_paths' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-971921ff7adb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_paths\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madjacency\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_paths\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madjacency\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_paths\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madjacency\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_paths\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madjacency\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m23\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m67\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_paths\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madjacency\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m93\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-37-c369aedac63e>\u001b[0m in \u001b[0;36mcompute_paths\u001b[0;34m(adjacency, source, target, length)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# Your code here.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mn_paths\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'n_paths' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(compute_paths(adjacency, 0, 10, 1))\n",
     "print(compute_paths(adjacency, 0, 10, 2))\n",
