--- a/milestone1/1_network_properties.ipynb
+++ b/milestone1/1_network_properties.ipynb
@@ -88,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/users/celiahacker/desktop/wikispeedia_paths-and-graph/'"
+    "data_path = '../wikispeedia_paths-and-graph/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "9            13th_century"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4      Édouard_Manet                           [subject.People.Artists]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "9                    16th_century           [subject.History.General_history]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        " 'subject.People.Historical_figures']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "(4598, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "4  Áedán_mac_Gabráin        Ireland"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "{'Directdebit', 'Friend_Directdebit', 'Pikachu'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "{'Friend_Directdebit', 'Pikachu', 'Sponsorship_Directdebit'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "4  14th_century  [subject.History.General_history]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "(4602, 2)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "4    4  14th_century"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
        "4         4592      2140"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "4602"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "183            1      3002"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
        "Text(0.5,1.05,'adjacency matrix')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1123,11 +1123,13 @@
     "\n",
     "L = np.sum(adjacency)\n",
     "# This sums the links in the directed graph: if we have A->B and B->A then it counts as two links. \n",
-    "# If we wanted this to count as one link we have to look at the undirected adjacency matrix\n",
+    "# If we wanted this to count as one link we would have to do the same computation on the undirected adjacency matrix and divide by 2 \n",
     "\n",
-    "L_max = int(n_nodes*(n_nodes-1)/2)\n",
+    "L_max_undirected = int(n_nodes*(n_nodes-1)/2)\n",
     "# Again, n_nodes*(n_nodes-1)/2) is the undirected case. In the directed case there can be two links between a node A and a node B. \n",
-    "# We add *2 because the maximal number of links is \"doubled\" by A->B and B->A (counted twice)\n",
+    "L_max = int(n_nodes*(n_nodes-1))\n",
+    "# We multiplied by 2 because the maximal number of links is \"doubled\" by A->B and B->A (need to count them twice)\n",
+    "\n",
     "print('L = {}, L_max = {}, sparsity = {:.4f}'.format(L, L_max, L/L_max))\n"
    ]
   },
@@ -1137,7 +1139,7 @@
    "source": [
     "*Answer* \n",
     "Clearly L << L_max as in many real world networks. It makes sense here as many wikipedia pages (like 'cats') will not be linked to other unrelated subjects (like 'spaceships') ;)\n",
-    "We can also see the sparsity in the adjacency matrix above. It's very white, not like Obama. "
+    "We can also see the sparsity in the adjacency matrix above. "
    ]
   },
   {
@@ -1162,16 +1164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12120cf60>"
+       "<matplotlib.image.AxesImage at 0x126d0b358>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1204,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1316,7 @@
     "# Considering the undirected graph\n",
     "L_undirected= np.sum(adjacency_undirected)/2\n",
     "# We compute the number of links in the undirected case as this will differ from the directed case\n",
-    "av= 2*L_undirected/n_nodes\n",
+    "\n",
     "\n",
     "print ('The average degree in the network is ' + str(2*L_undirected/n_nodes))"
    ]
@@ -1351,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,9 +1455,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    1,    1, ...,    3, 4602, 4602])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Implements the Djikstra algorithm from Wikipedia: https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#Algorithm\n",
     "# TODO: not shure if this is correct. also, it seems that some of the nodes are not reachable\n",
@@ -1526,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,8 +1562,8 @@
     "    int\n",
     "        The number of paths.\n",
     "    \"\"\"\n",
+    "    n_paths=int(np.linalg.matrix_power(adjacency, length)[source][target])\n",
     "    \n",
-    "    # Your code here.\n",
     "    \n",
     "    return n_paths"
    ]
@@ -1564,15 +1577,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "248\n",
+      "0\n",
+      "8079\n"
+     ]
+    }
+   ],
    "source": [
-    "print(compute_paths(adjacency, 0, 10, 1))\n",
-    "print(compute_paths(adjacency, 0, 10, 2))\n",
-    "print(compute_paths(adjacency, 0, 10, 3))\n",
-    "print(compute_paths(adjacency, 23, 67, 2))\n",
-    "print(compute_paths(adjacency, 15, 93, 4))"
+    "print(compute_paths(adjacency_undirected, 0, 10, 1))\n",
+    "print(compute_paths(adjacency_undirected, 0, 10, 2))\n",
+    "print(compute_paths(adjacency_undirected, 0, 10, 3))\n",
+    "print(compute_paths(adjacency_undirected, 23, 67, 2))\n",
+    "print(compute_paths(adjacency_undirected, 15, 93, 4))"
    ]
   },
   {
@@ -1586,11 +1611,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3702162721\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here."
+    "adjacency_undirected_power_3=np.linalg.matrix_power(adjacency_undirected,3)\n",
+    "\n",
+    "print(int(np.sum(adjacency_undirected_power_3)))"
    ]
   },
   {
@@ -1604,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,9 +1659,14 @@
     "        The clustering coefficient of the node. A number between 0 and 1.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here.\n",
+    "    L= adjacency_undirected_power_3[node][node]/2\n",
+    "    k= degree[node]\n",
     "    \n",
-    "    return clustering_coefficient"
+    "    clustering_coefficient= L/(k*(k-1))\n",
+    "    \n",
+    "    return clustering_coefficient\n",
+    "\n",
+    "# Modifiy this once we have the largest connected component (compute again adjacency_undirected_power_3 )"
    ]
   },
   {
@@ -1640,11 +1680,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average clustering coeffcient of our network is nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/celiahacker/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in double_scalars\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here."
+    "# Modifiy this once we have the largest connected component: some nodes are apparently completely isolated \n",
+    "average_clustering_coefficient=0 \n",
+    "for i in range (0, n_nodes-1):\n",
+    "    average_clustering_coefficient+= compute_clustering_coefficient(adjacency_undirected, i)\n",
+    "    \n",
+    "average_clustering_coefficient=average_clustering_coefficient/n_nodes\n",
+    "\n",
+    "print('The average clustering coeffcient of our network is '+str(average_clustering_coefficient))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/celiahacker/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:3: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# another possible solution without using the function defined above and without loop\n",
+    "# Modifiy this once we have the largest connected component \n",
+    "np.sum(np.diag(adjacency_undirected_power_3)/(2*degree*(degree-1)))/n_nodes"
    ]
   }
  ],
