matrix degree computed

--- a/milestone1/1_network_properties.ipynb
+++ b/milestone1/1_network_properties.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "9            13th_century"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "4      Édouard_Manet                           [subject.People.Artists]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "9                    16th_century           [subject.History.General_history]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        " 'subject.People.Historical_figures']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "(4598, 2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "4  Áedán_mac_Gabráin        Ireland"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "{'Directdebit', 'Friend_Directdebit', 'Pikachu'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "{'Friend_Directdebit', 'Pikachu', 'Sponsorship_Directdebit'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
        "4  14th_century  [subject.History.General_history]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "(4602, 2)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "4    4  14th_century"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -905,7 +905,7 @@
        "4         4592      2140"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "4602"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
        "183            1      3002"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
        "Text(0.5,1.05,'adjacency matrix')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1129,16 +1129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x108ad0dd8>"
+       "<matplotlib.image.AxesImage at 0x11d82c400>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
        "False"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
        "array([ 0.,  1.,  1., ...,  3., inf, inf])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
        "        4600, 4601]),)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1832,14 +1832,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#  we modified the API to account for the matrix multiplication, in order to do it just once. \n",
-    "def compute_clustering_coefficient(adjacency, node, power_mat=None):\n",
+    "def compute_clustering_coefficient(adjacency, node, power_mat=None, degree = None):\n",
     "    \"\"\"Compute the clustering coefficient of a node.\n",
     "    \n",
     "    Parameters\n",
@@ -1854,22 +1854,24 @@
     "    float\n",
     "        The clustering coefficient of the node. A number between 0 and 1.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    degree = np.sum(adjacency, axis = 0)\n",
+    "\n",
     "    if power_mat is None:\n",
     "        power_mat = sparse_matrix_pow(adjacency, 3)\n",
     "    L = power_mat[node][node]/2\n",
     "    #for L we computed the number of triangles based at the node, this number divided by two gives the number of links between the neighbors of the node\n",
+    "    if degree is None:\n",
+    "        degree = np.sum(adjacency, axis = 0)\n",
     "    k= degree[node]\n",
-    "    \n",
-    "    clustering_coefficient= L*2/(k*(k-1))\n",
-    "    \n",
-    "    return clustering_coefficient, power_mat\n"
+    "    if k==1:\n",
+    "        clustering_coefficient= 0\n",
+    "    else:\n",
+    "        clustering_coefficient= L*2/(k*(k-1))\n",
+    "    return clustering_coefficient, power_mat, degree\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1883,7 @@
     }
    ],
    "source": [
-    "coeff, power_mat = compute_clustering_coefficient(adj_larg_comp,0 )\n",
+    "coeff, power_mat, degree = compute_clustering_coefficient(adj_larg_comp,0 )\n",
     "print('The clustering coeff of node 0 is ', coeff)"
    ]
   },
@@ -1896,30 +1898,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4589"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_nodes_larg_comp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average clustering coeffcient of our network is 0.27784496796351454\n"
+     ]
+    }
+   ],
    "source": [
     "average_clustering_coefficient=0 \n",
     "for i in range(nb_nodes_larg_comp):\n",
-    "    coeff, _ = compute_clustering_coefficient(adj_larg_comp, i, power_mat)\n",
+    "    coeff, _, _ = compute_clustering_coefficient(adj_larg_comp, i, power_mat, degree)\n",
     "    average_clustering_coefficient+= coeff\n",
     "    \n",
     "average_clustering_coefficient=average_clustering_coefficient/nb_nodes_larg_comp\n",
     "\n",
     "print('The average clustering coeffcient of our network is '+str(average_clustering_coefficient))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# another possible solution without using the function defined above and without loop \n",
-    "np.sum(np.diag(power_mat)/(2*degree_larg_conn_comp*(nb_nodes_larg_comp-1)))/nb_nodes_larg_comp"
    ]
   },
   {
