--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -56,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "adjacency =  # the adjacency matrix\n",
@@ -78,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -105,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def erdos_renyi(n, p, seed=None):\n",
@@ -136,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "er = erdos_renyi(5, 0.6, 9765)\n",
@@ -149,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "er = erdos_renyi(10, 0.4, 7648)\n",
@@ -171,9 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -198,12 +186,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def barabasi_albert(n, m, seed=None):\n",
+    "def barabasi_albert(n, m, m0=2, seed=None):\n",
     "    \"\"\"Create an instance from the Barabasi-Albert graph model.\n",
     "    \n",
     "    Parameters\n",
@@ -212,6 +198,8 @@
     "        Size of the graph.\n",
     "    m: int\n",
     "        Number of edges to attach from a new node to existing nodes.\n",
+    "    m0: int (optional)\n",
+    "        Number of nodes for the inital connected network.\n",
     "    seed: int (optional)\n",
     "        Seed for the random number generator. To get reproducible results.\n",
     "    \n",
@@ -229,12 +217,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ba = barabasi_albert(5, 1, 9087)\n",
+    "ba = barabasi_albert(5, 1, 2, 9087)\n",
     "plt.spy(ba)\n",
     "plt.title('Barabasi-Albert (5, 1)')"
    ]
@@ -242,12 +228,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ba = barabasi_albert(10, 2, 8708)\n",
+    "ba = barabasi_albert(10, 2, 3, 8708)\n",
     "plt.spy(ba)\n",
     "plt.title('Barabasi-Albert (10, 2)')"
    ]
@@ -264,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -291,9 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -312,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def kl_divergence(p, q):\n",
@@ -341,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "p_test = np.array([0.2, 0.2, 0.2, 0.4])\n",
@@ -355,17 +331,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 7\n",
+    "### Question 7: \n",
     "\n",
-    "Compare the degree distribution of your network to each of the two synthetic ones, in terms of KL divergence. **Hint:** Make sure you normalise your degree distributions to make them valid probability distributions."
+    "Compare the degree distribution of your network to each of the two synthetic ones, in terms of KL divergence.\n",
+    "\n",
+    "**Hint:** Make sure you normalise your degree distributions to make them valid probability distributions.\n",
+    "\n",
+    "**Hint:** Make sure none of the graphs have disconnected nodes, as KL divergence will not be defined in that case. If that happens with one of the randomly generated networks, you can regenerate it and keep the seed that gives you no disconnected nodes."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -383,9 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -469,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -489,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -528,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
