--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -55,13 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adjacency =  # the adjacency matrix\n",
-    "n_nodes =  # the number of nodes in the network\n",
-    "n_edges =  # the number of edges in the network"
+    "import numpy as np\n",
+    "\n",
+    "adjacency =  np.load('adjacency_undirected.npz')['arr_0'] # the adjacency matrix\n",
+    "n_nodes =  adjacency.shape[0] # the number of nodes in the network\n",
+    "n_edges =  int(np.sum(adjacency)/2) # the number of edges in the network"
    ]
   },
   {
@@ -500,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
