--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -55,8 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -77,8 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -102,8 +106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def erdos_renyi(n, proba, seed=None):\n",
@@ -267,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def barabasi_albert(n, m, m0=2, seed=None):\n",
@@ -481,8 +489,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def kl_divergence(p, q):\n",
@@ -494,27 +504,111 @@
     "        Probability distribution of degrees of the 1st graph.\n",
     "    q: np.array\n",
     "        Probability distribution of degrees of the 2nd graph.\n",
-    "    \n",
+    "    Note: the two arrays should have same length\n",
     "    Returns\n",
     "    -------\n",
     "    kl\n",
     "        The KL divergence between the two distributions.\n",
     "    \"\"\"\n",
+    "    assert p.size == q.size , 'distributions should be of the same length '\n",
+    "    # first step is ignoring the degrees that have 0 in either distribution\n",
+    "    idx_nonzero_p = np.nonzero(p)\n",
+    "    p = p[idx_nonzero_p]\n",
+    "    q = q[idx_nonzero_p]\n",
+    "    idx_nonzero_q = np.nonzero(q)\n",
+    "    p = p[idx_nonzero_q]\n",
+    "    q = q[idx_nonzero_q]\n",
     "    \n",
-    "    # Your code here.\n",
-    "    \n",
+    "    # now we can make the dot product, taking advantage of numpy fast vector operations\n",
+    "    kl= np.dot(p, np.log(p/q))\n",
     "    return kl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09151622184943572"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p_test = np.array([0.2, 0.2, 0.2, 0.4])\n",
     "q_test = np.array([0.3, 0.3, 0.1, 0.3])\n",
     "kl_divergence(p_test, q_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09635805194535241"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# same result as wiki page\n",
+    "p_test = np.array([0.36,0.48,0.16])\n",
+    "q_test = np.array([0.333,0.333,0.333])\n",
+    "kl_divergence( q_test, p_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# introduce 0\n",
+    "kl_divergence(np.array([0, 1]), np.array([1, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# same distrib\n",
+    "kl_divergence(np.array([0, 1]), np.array([0,1]))"
    ]
   },
   {
@@ -533,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here."
@@ -551,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here."
@@ -635,7 +733,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here."
@@ -653,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here."
@@ -690,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
