correct doc, clearer variable names

--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -306,13 +306,12 @@
     "    adjacency = np.zeros([n, n], dtype=int)\n",
     "    degree = np.zeros(n, dtype=int)\n",
     "\n",
-    "    # generate initial fully connected network with one edge per added node. (m0-1 edges)\n",
+    "    # generate initial connected network with one edge per added node. (m0-1 edges)\n",
     "    for i in range(1, m0):\n",
-    "        edge = np.random.choice(i, 1)\n",
-    "        print(edge)\n",
-    "        adjacency[i, edge] = adjacency[edge, i] = 1\n",
+    "        target = np.random.choice(i, 1)\n",
+    "        adjacency[i, target] = adjacency[target, i] = 1\n",
     "        degree[i] += 1\n",
-    "        degree[edge] += 1\n",
+    "        degree[target] += 1\n",
     "\n",
     "    # Grow network\n",
     "    for i in range(m0, n):\n",
@@ -320,10 +319,10 @@
     "        dist = degree[:i] / np.sum(degree[:i])\n",
     "\n",
     "        # Choose m links without replacement with given probability distribution\n",
-    "        edges = np.random.choice(i, m, replace=False, p=dist)\n",
-    "        adjacency[i,edges] = adjacency[edges, i] = 1\n",
+    "        targets = np.random.choice(i, m, replace=False, p=dist)\n",
+    "        adjacency[i,targets] = adjacency[targets, i] = 1\n",
     "        degree[i] += 1\n",
-    "        degree[edges] += 1\n",
+    "        degree[targets] += 1\n",
     " \n",
     "    return adjacency"
    ]
