--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -432,7 +432,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "#degree distribution of our network \n",
+    "degree_wiki=np.sum(adjacency, axis=0)\n",
+    "degree_distribution_wiki= np.histogram(degree_wiki,np.arange(max(degree_wiki)+1))[0]/n_nodes\n",
+    "#compute degree distribution Erdos Reny Graph\n",
+    "degree_ER=np.sum(randomER, axis =0)\n",
+    "degree_distribution_ER= np.histogram(degree_ER,np.arange(max(degree_ER)+1))[0]/n_nodes\n",
+    "#degree distribution AB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#theoretical degeree distribution in ER graph\n",
+    "degree_distribution_ER_theoretical=np.zeros(n_nodes)\n",
+    "for k in range(n_nodes):\n",
+    "    degree_distribution_ER_theoretical[k]= scipy.special.binom(n_nodes,k)*np.power(proba,k)*np.power(1-proba,n_nodes-1-k)\n"
    ]
   },
   {
