added matrix for largest wcc

--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -78,6 +78,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savez_compressed('adjacency_undirected.npz', adjacency_undirected)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
