--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -417,13 +417,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TODO: choose nb_hubs"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -462,13 +455,6 @@
    "metadata": {},
    "source": [
     "We computed the number of edges that should be added for each node (the value m) so that the total number of edges would be similar to the one of our wikipedia graph, depending on the number of initial nodes in the BA process. To decide on the number of initial nodes, we chose to look at the number of big hubs in our graph, so that we would have something similar in the BA random graph. We decided on a threshold for the number of nodes with more than 400 as degree, there are 25 of them. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TODO: explain params"
    ]
   },
   {
@@ -671,7 +657,9 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Your code here.\n",
@@ -859,7 +847,9 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "degree_wiki_log = return_hist(degree_wiki, np.geomspace(1, max(degree_wiki)))\n",
@@ -1170,7 +1160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
