--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
     "\n",
     "# the adjacency matrix we will work with is the adjacency matrix of the largest weakly connected component \n",
     "adjacency_disconnected =  np.load('adjacency_undirected.npz')['arr_0'] # the adjacency matrix\n",
-    "adjacency = np.load('largest_wcc.npy') \n",
+    "adjacency = np.load('largest_wcc.npz')['arr_0'] \n",
     "n_nodes =  adjacency.shape[0] # the number of nodes in the network\n",
     "n_edges =  int(np.sum(adjacency)/2) # the number of edges in the network\n",
     "print('the network has {} nodes and {} edges'.format(n_nodes, n_edges))"
