--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -946,7 +946,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#compare distributions with KL divergence"
+    "#compare distributions with KL divergence\n",
+    "print(kl_divergence(degree_distribution_wiki,degree_G ))\n",
+    "# need to normalize and do degree distribution and stuff !!!!!!!!!!!!!!!!"
    ]
   },
   {
@@ -965,7 +967,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diam_wiki=nx.diameter(G_wiki)"
+    "diam_wiki=nx.diameter(Graph_wiki)"
    ]
   },
   {
@@ -988,23 +990,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Are the results what you expected? Explain."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1017,13 +1007,6 @@
     "\n",
     "We conclude that this model fits our graph quite well, but it could be much improved at the level of clustering around one node (clustering coefficient)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1042,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
