--- a/milestone2/2_network_models.ipynb
+++ b/milestone2/2_network_models.ipynb
@@ -1498,7 +1498,7 @@
     "\n",
     "The number of nodes are the same (obviously) and the number of edges are similar (we cannot have exactly the same number of edges but they are close enough). \n",
     "\n",
-    "The diameters are similar, however it is uncelar how much this is a coincidence due tu random network generation.\n",
+    "The diameters are the same. However, it is uncelar how much this is a coincidence due to random network generation.\n",
     "\n",
     "We expected the clustering coefficients of the model using p=average clustering coefficient to be higher and closer to the ones of our graph. We were surprised, but when we realized that p=1 was a great value we decided to keep the analysis with this one. A higher value for p increases the clustering coefficient (as it increases the probability of creating triangles). Choosing p=1 was hence a good fit because wikipedia is a really dense graph, in the sense that hubs have very high clustering coefficient. The value p=1 sort of force nodes that have almost triangles formed around them to \"finish\" the triangles, and hence get really high clustering coefficient. \n",
     "\n",
