constructing incidence matrix S

--- a/milestone4/4_graph_signal_processing.ipynb
+++ b/milestone4/4_graph_signal_processing.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,8 @@
     "from scipy import sparse\n",
     "import scipy.sparse.linalg\n",
     "from matplotlib import pyplot as plt\n",
-    "from pyunlocbox import functions, solvers"
+    "from pyunlocbox import functions, solvers\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -136,18 +137,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "laplacian = # Your code here.\n",
-    "gradient = # Your code here.\n",
-    "labels = # Your code here.\n",
-    "n_nodes = # Your code here."
+    "# Load adjacency matrix\n",
+    "adjacency= np.load('largest_wcc.npz')['arr_0']\n",
+    "#note: our graph contains selfloops. To compute the Laplacian and do the work below, we delete them (as per slides)\n",
+    "adjacency = adjacency - np.diag(np.diag(adjacency))\n",
+    "n_nodes = adjacency.shape[0] # the number of nodes in the network \n",
+    "n_edges =  int(np.sum(adjacency)/2) # the number of edges in the network"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute combinatorial laplacian \n",
+    "degree_matrix = sparse.spdiags(np.sum(adjacency,axis=0), 0, n_nodes, n_nodes)\n",
+    "adjacency = sparse.csr_matrix(adjacency)\n",
+    "laplacian_combinatorial =  degree_matrix - adjacency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute normalised laplacian\n",
+    "# first compute D^(-1/2),we can make it into a matrix after\n",
+    "D_inv_sq = 1 / np.sqrt(np.sum(adjacency,axis=0))\n",
+    "D_inv_sq = sparse.spdiags(D_inv_sq, 0, n_nodes, n_nodes)\n",
+    "laplacian_normalized = sparse.eye(n_nodes) - D_inv_sq @ adjacency @ D_inv_sq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compute S \n",
+    "edges= pd.read_csv('edges.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_list=edges.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(119882, 3)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#idx=np.where(edge_list[:,1]!=edge_list[:,2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_nodes=max(edge_list[2])\n",
+    "N_edges= 119772"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 4592 is out of bounds for axis 0 with size 4592",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-74-260e0edc81d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 4592 is out of bounds for axis 0 with size 4592"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "S = np.zeros((N_nodes,N_edges), dtype=int)\n",
+    "k=0\n",
+    "for idx, row in edges.iterrows():\n",
+    "    if np.isnan(row.link_idx):\n",
+    "        continue\n",
+    "    i, j = int(row.article_idx), int(row.link_idx)\n",
+    "    if i==j:\n",
+    "        S[i,k] = 0, \n",
+    "        S[j,k] = 0\n",
+    "    else:\n",
+    "        S[i,k] = 1\n",
+    "        S[j,k] = -1\n",
+    "    k=k+1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-62-4de26fbe0529>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-62-4de26fbe0529>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    labels = # Your code here.\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "laplacian = laplacian_normalized \n",
+    "gradient = np.zeros((n_edges,n_nodes))# = S where rows= edges , columns = nodes \n",
+    "labels = # Your code here.\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "## 1 - Graph Fourier Transform\n",
