--- a/milestone4/4_graph_signal_processing.ipynb
+++ b/milestone4/4_graph_signal_processing.ipynb
@@ -338,6 +338,8 @@
    },
    "outputs": [],
    "source": [
+    "#not what should be done here! CF beginning of milestone to draw the signal on the graph. I think colors are the best option for us\n",
+    "#save the graph plot outside !\n",
     "def plot_fourier(eigenvector, title ):\n",
     "    fig = plt.figure()\n",
     "    ax = plt.gca()\n",
@@ -504,7 +506,7 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here. "
+    "# Your code here.  REUSE FUNCTION ABOVE"
    ]
   },
   {
@@ -523,7 +525,7 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here."
+    "# Your code here. \n"
    ]
   },
   {
