--- a/milestone4/4_graph_signal_processing.ipynb
+++ b/milestone4/4_graph_signal_processing.ipynb
@@ -638,17 +638,28 @@
    "outputs": [],
    "source": [
     "def heat_kernel(e, t):\n",
-    "    \n",
-    "    return \n",
+    "    return np.exp(-t*e)\n",
     "\n",
     "def inverse_kernel(e, t):\n",
-    "    return # Your code here.\n",
+    "    I=np.eye(len(e))\n",
+    "    return np.linalg.inv(I+t*laplacian_combinatorial).dot(e)\n",
     "\n",
     "def rectangle_kernel(e, l_min, l_max):\n",
-    "    return # Your code here.\n",
+    "    cond = np.logical_and(e >= l_min, e <= l_max)\n",
+    "    return np.where(cond, 1, 0)\n",
     "\n",
     "def graph_filter(x, kernel, **kwargs):\n",
-    "    return # Your code here."
+    "    e = eigenvalues_comb\n",
+    "    return iGFT(kernel(e, **kwargs)*GFT(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_filter(label, heat_kernel, tau=1.0)"
    ]
   },
   {
